# photocurator

./: .gitignore  README.md  docker-compose.yaml
backend/: .env  .env.example  .gitignore  README.md  dbscheme.mermaid  openapi.yaml  package.json  pnpm-lock.yaml
backend-py/: .env.example  .gitignore  CODE_GUIDE.md  README.md  pyproject.toml  server.py  worker.py
backend-py/src/: db.py  statistics.py
backend-py/src/tasks/: __init__.py  base.py  exif_analysis.py  gps_grouping.py  image_captioning.py  object_detection.py  quality_assessment.py  similarity_grouping.py  thumbnail_generation.py
backend/drizzle/: 0000_boring_nicolaos.sql  0001_stiff_pete_wisdom.sql  0002_slippery_malice.sql  0003_good_frightful_four.sql  0004_illegal_lady_vermin.sql  0006_zippy_pixie.sql  0007_burly_squadron_supreme.sql
backend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  _journal.json
backend/src/: index.ts
backend/src/db/: index.ts
backend/src/lib/: auth.ts
backend/src/routes/: ads.ts  auth.ts  images.ts  projects.ts  search.ts  users.ts
frontend-mobile/: README.md  pubspec.yaml
frontend-mobile/android/app/: build.gradle.kts
frontend-mobile/ios/Runner/: Info.plist
frontend-mobile/ios/Runner.xcodeproj/: project.pbxproj
frontend-mobile/lib/: main.dart
frontend-mobile/linux/: CMakeLists.txt
frontend-mobile/test/: widget_test.dart
frontend-mobile/web/: index.html  manifest.json
frontend-mobile/windows/: CMakeLists.txt
(+98 files in other folders)
